crates/templates/tests/snapshots/run_test__impl-5.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with multiple commands and a default value
expression: output
---
run() {
  declare -A args=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Call the right command action
  case "$action" in
    "bar")
      parse_bar_arguments "${input[@]}"
      shift $#
      bar
      ;;
    "baz")
      parse_baz_arguments "${input[@]}"
      shift $#
      baz
      ;;
    "foo")
      parse_foo_arguments "${input[@]}"
      shift $#
      foo
      ;;
    "")
      usage
      exit
      ;;
  esac
}

