crates/templates/tests/snapshots/run_test__impl-9.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with multiple global dependencies and a message
expression: output
---

run() {
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Check global dependencies
  
  for dependency in git curl wget; do
    if ! command -v $dependency >/dev/null 2>&1; then
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: " "$dependency" >&2
      printf "Please install git, curl and wget\n" >&2
      exit 1
    else
      deps["$dependency"]="$(command -v $dependency | head -n1)"
    fi
  done

  printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Nothing to do. Please add" "commands or a root command" >&2
  usage >&2
  exit 1
}

