crates/templates/tests/snapshots/run_test__impl.snap
---
source: crates/templates/tests/run_test.rs
expression: output
---
run() {
  declare -A args=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  
  
  # Call the right command action
  case "$action" in
    "bar") bar ;;
  
    "baz") baz ;;
  
    "foo") foo ;;
  esac
}

