crates/templates/tests/snapshots/run_test__render-14.snap
---
source: crates/templates/tests/run_test.rs
description: Script has an documented environment variable
expression: output
---
rargs_run() {
  declare -a rargs_input=()
  normalize_rargs_input "$@"
  parse_arguments "${rargs_input[@]}"
  

  printf "\e[31m%s\e[33m%s\e[31m%s\e[0m\n\n" "Nothing to do. Please add " "commands" " or a root command" >&2
  usage >&2
  exit 1
}
